--- a/example/index.html
+++ b/example/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.20/angular.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/dist/angular-time-picker.min.css">
+
+	<link rel="stylesheet" type="text/css" href="../bower_components/css-helpers-lib/helpers.css">
+	<link rel="stylesheet" type="text/css" href="../bower_components/angular-material/angular-material.css">
+	<link rel="stylesheet" type="text/css" href="/dist/angular-time-picker.min.css">
+
+
 </head>
 
   <body ng-app="testApp" ng-controller="testController">
@@ -32,6 +36,8 @@
 		data-clear-callback="onClearTimePicker()"
 		style="margin-top:120px;">
 	</wy-time-picker>
+	<script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+	<script type="text/javascript" src="../bower_components/angular-material/angular-material.js"></script>
 	<script type="text/javascript" src="/dist/angular-time-picker.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
   </body>
